--- a/src/main/resources/templates/user-dashboard.hbs
+++ b/src/main/resources/templates/user-dashboard.hbs
@@ -7,7 +7,7 @@
 <body>
   {{#partial "links"}}
     <li class="nav-item active">
-      <a class="nav-link" href="#">Estado del Hogar</a>
+      <a class="nav-link" href="/user/dashboard/estado-del-hogar">Estado del Hogar</a>
     </li>
     <li class="nav-item active">
       <a class="nav-link" href="#">Consumos</a>
