alta de dispositivo controller y view

--- a/src/main/resources/templates/admin-dashboard.hbs
+++ b/src/main/resources/templates/admin-dashboard.hbs
@@ -10,7 +10,7 @@
       <a class="nav-link" href="/admin/dashboard/reporte-de-consumo">Reporte de Consumo</a>
     </li>
     <li class="nav-item active">
-      <a class="nav-link" href="#">Alta de Dispositivos</a>
+      <a class="nav-link" href="/admin/dashboard/alta-de-dispositivo">Alta de Dispositivos</a>
     </li>
     <li class="nav-item active">
       <a class="nav-link" href="/logout">Salir</a>
