--- a/src/main/resources/templates/alta-de-dispositivo.hbs
+++ b/src/main/resources/templates/alta-de-dispositivo.hbs
@@ -7,7 +7,7 @@
 <body>
   {{#partial "links"}}
     <li class="nav-item active">
-      <a class="nav-link" href=/admin/dashboard/reporte-de-consumo">Reporte de Consumo</a>
+      <a class="nav-link" href="/admin/dashboard/reporte-de-consumo">Reporte de Consumo</a>
     </li>
     <li class="nav-item active">
       <a class="nav-link" href="/admin/dashboaard/alta-de-dispositivo">Alta de Dispositivos</a>
