success and error alerts en alta de dispositivo

--- a/src/main/resources/public/css/style.css
+++ b/src/main/resources/public/css/style.css
@@ -61,6 +61,11 @@ nav {
   display: none;
 }
 
+#success-alert,
+#error-alert {
+  margin-top: 20px;
+}
+
 @media (max-width: 736px) {
   header {
     padding: 60px 20px;
