cambio en paths, saco el /dashboard/ de todas las rutas que no tenia sentido que lo tengan

--- a/src/main/resources/templates/user-dashboard.hbs
+++ b/src/main/resources/templates/user-dashboard.hbs
@@ -7,10 +7,10 @@
 <body>
   {{#partial "links"}}
     <li class="nav-item active">
-      <a class="nav-link" href="/user/dashboard/estado-del-hogar">Estado del Hogar</a>
+      <a class="nav-link" href="/user/estado-del-hogar">Estado del Hogar</a>
     </li>
     <li class="nav-item active">
-      <a class="nav-link" href="#">Consumos</a>
+      <a class="nav-link" href="/user/consumos-por-periodo">Consumos</a>
     </li>
     <li class="nav-item active">
       <a class="nav-link" href="/logout">Salir</a>
