--- a/src/main/resources/templates/alta-de-dispositivo.hbs
+++ b/src/main/resources/templates/alta-de-dispositivo.hbs
@@ -7,10 +7,10 @@
 <body>
   {{#partial "links"}}
     <li class="nav-item active">
-      <a class="nav-link" href="/admin/dashboard/reporte-de-consumo">Reporte de Consumo</a>
+      <a class="nav-link" href="/admin/reporte-de-consumo">Reporte de Consumo</a>
     </li>
     <li class="nav-item active">
-      <a class="nav-link" href="/admin/dashboaard/alta-de-dispositivo">Alta de Dispositivos</a>
+      <a class="nav-link" href="#">Alta de Dispositivos</a>
     </li>
     <li class="nav-item active">
       <a class="nav-link" href="/logout">Salir</a>
@@ -103,11 +103,11 @@
           obj.interfaz = interfaz
         }
 
-      	console.log(obj);
-      	fetch('/admin/dashboard/alta-de-dispositivo', {
+        fetch('/admin/alta-de-dispositivo', {
       		method: 'POST',
       		body: JSON.stringify(obj)
       	}).then(res => {
+          console.log(res)
           if(res.status === 500) {
             responseAlert(errorAlert)
             return;
