--- a/src/main/resources/templates/login.hbs
+++ b/src/main/resources/templates/login.hbs
@@ -8,15 +8,55 @@
   {{> partials/nav.hbs}}
   <header>
     <h1>Ingreso</h1>
-    <form class="login-form" action="/login" method="post">
+    <div class="form login-form" id="form">
       <div class="form-group">
-        <input type="text" class="form-control" id="userInput" placeholder="Usuario" name="username">
+        <input type="text" class="form-control" id="usernameInput" placeholder="Usuario" name="username">
       </div>
       <div class="form-group">
         <input type="password" class="form-control" id="passwordInput" placeholder="Password" name="password">
       </div>
-      <button type="submit" class="btn btn-primary">Ingresar</button>
-    </form>
+      <button id="submit-button" class="btn btn-primary">Ingresar</button>
+    </div>
+    <div class="alert alert-danger hide" id="error-alert" role="alert">
+      Usuario o contraseña incorrectos.
+    </div>
   </header>
+  <script>
+    const show = (element) => { element.classList.remove("hide") }
+    const hide = (element) => { element.classList.add("hide") }
+    const responseAlert = (element) => {
+      show(element);
+      setTimeout(() => hide(element), 1500);
+    }
+
+    window.onload = function() {
+      const passwordInput = document.getElementById("passwordInput");
+      const usernameInput = document.getElementById("usernameInput");
+
+      const button = document.getElementById("submit-button");
+
+      const errorAlert = document.getElementById("error-alert");
+      button.addEventListener("click", (e) => {
+        const password = passwordInput.value;
+        const username = usernameInput.value;
+
+        console.log(password, username)
+        fetch("/login", {
+          method: "POST",
+          body: JSON.stringify({username, password})
+        }).then(res => {
+          if(res.status === 403) {
+            responseAlert(errorAlert);
+            throw new Error();
+          } else if (res.status === 200) {
+            // hacer el redirect a mano
+            window.location.href = res.url
+          }
+        }).catch(e => {
+          console.log(e)
+        })
+      })
+    }
+  </script>
 </body>
 </html>
