dispositivo decorator para mostrar estado del hogar

--- a/src/main/resources/templates/user-dashboard.hbs
+++ b/src/main/resources/templates/user-dashboard.hbs
@@ -33,7 +33,7 @@
         {{#each dispositivos}}
           <tr>
             <td>{{nombre}}</td>
-            <td class="{{class}}">{{estado}}</td>
+            <td class="{{style}}">{{estado}}</td>
             <td>{{consumo}}</td>
           </tr>
         {{/each}}
