mando datos de cotas y horas de uso al back, alta de dispositivos

--- a/src/main/resources/templates/alta-de-dispositivo.hbs
+++ b/src/main/resources/templates/alta-de-dispositivo.hbs
@@ -24,6 +24,7 @@
         <label for="nombre">Nombre</label>
         <input type="text" class="form-control" id="nombre">
       </div>
+
       <div class="form-group">
         <label for="consumoPorHora">Consumo por hora</label>
         <div class="input-group">
@@ -33,6 +34,27 @@
           </div>
         </div>
       </div>
+
+      <div class="form-group">
+        <label for="cotaInferior">Cota inferior de consumo</label>
+        <div class="input-group">
+          <input type="number" class="form-control" id="cotaInferior">
+          <div class="input-group-append">
+            <span class="input-group-text">kWh</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="cotaSuperior">Cota superior de consumo</label>
+        <div class="input-group">
+          <input type="number" class="form-control" id="cotaSuperior">
+          <div class="input-group-append">
+            <span class="input-group-text">kWh</span>
+          </div>
+        </div>
+      </div>
+
       <div class="form-group">
         <label>Tipo de Dispositivo</label>
         <div class="custom-control custom-radio">
@@ -44,9 +66,20 @@
           <label class="custom-control-label" for="estandar">Dispositivo Estandar</label>
         </div>
       </div>
+
+      <div class="form-group" id="horas-de-uso-box">
+        <label for="horasDeUso">Horas de uso</label>
+        <div class="input-group">
+          <input type="number" class="form-control" id="horasDeUso">
+          <div class="input-group-append">
+            <span class="input-group-text">hr</span>
+          </div>
+        </div>
+      </div>
+
       <div class="form-group hide" id="interfaz-box">
         <label for="interfaz">Interfaz</label>
-        <select class="form-control form-control-sm" id="interfaz">
+        <select class="form-control form-control-md" id="interfaz">
           <option disabled>Interfaz</option>
           <option value="sony">Sony XC3232</option>
           <option value="samsung">Samsung #Y123</option>
@@ -74,18 +107,29 @@
     window.onload = function() {
       const radios = document.getElementsByName('tipo')
       const interfazBox = document.getElementById('interfaz-box')
+      const horasDeUsoBox = document.getElementById('horas-de-uso-box')
+
       const successAlert = document.getElementById('success-alert')
       const errorAlert = document.getElementById('error-alert')
 
       radios.forEach((r) => {
         r.onclick = function() {
-          this.id === "inteligente" ? show(interfazBox) : hide(interfazBox)
+          if (this.id === "inteligente") {
+            show(interfazBox)
+            hide(horasDeUsoBox)
+          } else {
+            hide(interfazBox)
+            show(horasDeUsoBox)
+          }
         }
       })
-      
+
       const button = document.getElementById('submit-button');
       const inputNombre = document.getElementById("nombre");
       const inputConsumo = document.getElementById("consumoPorHora");
+      const inputCotaInferior = document.getElementById('cotaInferior')
+      const inputCotaSuperior = document.getElementById('cotaSuperior')
+      const inputHorasDeUso = document.getElementById('horasDeUso')
 
       const resetForm = () => {
         inputNombre.value = "";
@@ -95,17 +139,22 @@
       button.addEventListener('click', (e) => {
         const nombre = inputNombre.value
         const consumoPorHora = inputConsumo.value
+        const cotaInferior = inputCotaInferior.value
+        const cotaSuperior = inputCotaSuperior.value
+        const horasDeUso = inputHorasDeUso.value
         const inteligente = document.getElementById("inteligente").checked
         const interfaz = document.getElementById("interfaz").value
 
-        let obj = { inteligente, nombre, consumoPorHora }
+        let data = { inteligente, nombre, consumoPorHora, cotaInferior, cotaSuperior }
         if (inteligente) {
-          obj.interfaz = interfaz
+          data.interfaz = interfaz
+        } else {
+          data.horasDeUso = horasDeUso
         }
 
         fetch('/admin/alta-de-dispositivo', {
       		method: 'POST',
-      		body: JSON.stringify(obj)
+      		body: JSON.stringify(data)
       	}).then(res => {
           if(res.status === 500) {
             responseAlert(errorAlert)
