mostrar consumo del ultimo periodo del dispositivo

--- a/src/main/resources/templates/user-dashboard.hbs
+++ b/src/main/resources/templates/user-dashboard.hbs
@@ -28,7 +28,7 @@
         <tr>
           <th scope="col">Dispositivos</th>
           <th scope="col">Estado</th>
-          <th scope="col">Consumo Promedio</th>
+          <th scope="col">Consumo último período</th>
         </tr>
       </thead>
       <tbody>
