consumoUltimoPeriodo en user dashboard

--- a/src/main/resources/templates/user-dashboard.hbs
+++ b/src/main/resources/templates/user-dashboard.hbs
@@ -22,6 +22,7 @@
   {{> partials/nav.hbs}}
   <header>
     <h1>Estado del Hogar</h1>
+    <p>Tu consumo en el último mes fue de: {{consumoUltimoPeriodo}}</p>
     <p>Acá podes ver el estado actual de tus dispositivos del hogar.</p>
     <table class="table estado-hogar-table">
       <thead>
